--- a/assets/templates/admins/AdminHome.html
+++ b/assets/templates/admins/AdminHome.html
@@ -10,7 +10,7 @@
                     <div class="col-lg-5 col-sm-7">
                         <div class="top_left_cont zoomIn wow animated">
 
-                            <h2>Kernel Lasso Regression Algorithm for <strong>Predicting Electricity Loads</strong></h2>
+                            <h2 style="color: rgb(8, 10, 44);">Kernel Lasso Regression Algorithm for <strong>Predicting Electricity Loads</strong></h2>
                             <p>Forecasting electricity demand is a crucial safeguard for the efficient and safe operation of power systems.
                                 In general, the forecasting performance of conventional linear regression techniques is subpar for power demand data with greater dimensions.
                                 The linear technique may handle non-linear data by using kernel functions to translate the data to a high-dimensional space.
@@ -40,7 +40,7 @@
                             alt=""></div>
                     <div class=" col-lg-7 col-md-7 col-sm-7 col-xs-12 pull-left">
                         <div class=" delay-01s animated fadeInDown wow animated">
-                            <h3>Kernel Lasso Regression Algorithm for <strong>Predicting Electricity Loads</h3><br/>
+                            <h3 style="color: rgb(8, 10, 44);">Kernel Lasso Regression Algorithm for <strong>Predicting Electricity Loads</h3><br/>
                                 <p>Electricity load forecasting that is accurate and trustworthy can offer dependable decision-making support for the planning and operation of the electricity system as well as a guarantee for the efficient and safe functioning of the system. It's been a popular area of study both domestically and internationally how to increase predicting accuracy. Lasso is a commonly used variable selection tool that was first developed by Tibshirani in 1996. In order to increase the efficiency of the lasso approach, methods like Iteratively Reweighted Least Squares (IRLS), ε-boosting, Least Angle Regression (Lars), and piecewise linear have been proposed. However, in the case of electricity-loads, the lasso's predictions are less accurate. Combining Kernal function, which can deal with non-linearity, with Lasso Regression can signifacntly improve prediction of electricity-loads.</p>
                         </div>
                         <div class="work_bottom"><span>Want to know more..</span> <a href="mailto: mashettyvishwaja2102@gmail.com" target="_blank" class="contact_btn">Contact Us</a>
