--- a/assets/templates/admins/RegisteredUsers.html
+++ b/assets/templates/admins/RegisteredUsers.html
@@ -7,7 +7,7 @@
             <div class="container">
                 <section class="page_section contact" id="contact">
                     <p>
-                    <h3 align="center" style="color:white;">View RegisterUser Details</h3></p><br>
+                    <h3 align="center" style="color:white;">USER DETAILS</h3></p><br>
                     <table class="table table-bordered bg-light text-dark">
                         <thead>
                         <tr style="color:red;font-weight:bold;">
@@ -52,6 +52,8 @@
 
                         </tbody>
                     </table>
+                    <br />
+                    <br />
                 </section>
             </div>
         </footer>
