--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -8,11 +8,11 @@
             <div class="hero_section">
                 <div class="row">
                     <div class="col-lg-5 col-sm-7">
-                        <div class="top_left_cont zoomIn wow animated">
+                        <div class="top_left_cont zoomIn wow animated" >
 
                             <!-- <h2>An Electricity <strong> Load Forecasting Algorithm Based</strong> on Kernel Lasso Regression</h2> -->
-                            <h2>Kernel Lasso Regression Algorithm for <strong>Predicting Electricity Loads</strong></h2>
-                            <p>Forecasting electricity demand is a crucial safeguard for the efficient and safe operation of power systems.
+                            <h2 style="color: red">Kernel Lasso Regression Algorithm for <strong>Predicting Electricity Loads</strong></h2>
+                            <p style="color: rgb(8, 10, 44);">Forecasting electricity demand is a crucial safeguard for the efficient and safe operation of power systems.
                                 In general, the forecasting performance of conventional linear regression techniques is subpar for power demand data with greater dimensions.
                                 The linear technique may handle non-linear data by using kernel functions to translate the data to a high-dimensional space.
                                 In order to tackle the regression analysis problem for non-time series data, kernel function is added to the lasso linear regression approach and is applied to non-linear situations.
